--- a/PokeFinder/Info.plist
+++ b/PokeFinder/Info.plist
@@ -32,5 +32,7 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Location is needed to show nearby Pokemon</string>
 </dict>
 </plist>
